--- a/app/src/main/res/layout/grid_image.xml
+++ b/app/src/main/res/layout/grid_image.xml
@@ -19,7 +19,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ListItemLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center_horizontal"
