--- a/app/src/main/res/layout/grid_image.xml
+++ b/app/src/main/res/layout/grid_image.xml
@@ -15,20 +15,21 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ListItemLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:foreground="?android:attr/selectableItemBackground"
+    android:background="@color/hwSecurityRed"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <com.elyeproj.loaderviewlibrary.LoaderImageView
         android:id="@+id/thumbnail_shimmer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/grid_image_icon_margin"
         android:contentDescription="@null"
         android:visibility="gone"
@@ -36,13 +37,13 @@
         app:height_weight="0.6"
         app:width_weight="0.4" />
 
-    <com.owncloud.android.ui.SquareImageView
+    <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@null"
-        android:padding="@dimen/grid_image_icon_padding"
-        android:scaleType="centerCrop"
+        android:padding="4dp"
+        android:scaleType="centerInside"
         android:src="@drawable/folder" />
 
     <ImageView
@@ -51,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="@dimen/standard_quarter_margin"
+
         android:contentDescription="@string/favorite_icon"
         android:visibility="gone"
         android:src="@drawable/favorite" />
@@ -61,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_marginTop="@dimen/grid_image_shared_icon_layout_top_margin"
+        android:visibility="gone"
         android:layout_marginEnd="@dimen/standard_quarter_margin"
         android:contentDescription="@string/shared_icon_shared_via_link"
         android:src="@drawable/shared_via_link" />
@@ -80,13 +83,14 @@
 
     <ImageView
         android:id="@+id/localFileIndicator"
-        android:layout_width="@dimen/grid_image_local_file_indicator_layout_width"
-        android:layout_height="@dimen/grid_image_local_file_indicator_layout_height"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_gravity="bottom|end"
         android:layout_marginTop="@dimen/standard_quarter_margin"
         android:layout_marginEnd="@dimen/standard_quarter_margin"
         android:layout_marginBottom="@dimen/standard_quarter_margin"
         android:contentDescription="@string/synced_icon"
+        android:visibility="gone"
         android:src="@drawable/ic_synced" />
 
     <ImageView
@@ -96,6 +100,7 @@
         android:layout_gravity="center_vertical|top"
         android:layout_marginLeft="@dimen/standard_quarter_margin"
         android:layout_marginRight="@dimen/standard_quarter_margin"
+        android:visibility="gone"
         android:contentDescription="@string/checkbox"
         android:src="@android:drawable/checkbox_off_background" />
-</FrameLayout>
+</LinearLayout>
